cmake_minimum_required(VERSION 3.29)
project(Todos_los_programas)

set(CMAKE_CXX_STANDARD 20)

add_executable(Todos_los_programas main.cpp
        Ahorcado.cpp
        Ahorcado.h
        monito.cpp
        monito.h
        QuickSort.cpp
        QuickSort.h
        MergeSort.cpp
        MergeSort.h
        BubbleSort.cpp
        BubbleSort.h
        Seleccion.cpp
        Seleccion.h
        Insersion.cpp
        Insersion.h)
